Bug 1231647 - Check for duplicate exported let and const in modules r=shu